{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 363,
  "lineage": "3363f8e3-08e2-5789-74c1-2394eec9543f",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:security-group/sg-09fdb12f6ec823db8",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fdb12f6ec823db8",
            "ingress": [],
            "name": "infoline-eks-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "744804011706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infoline-eks-cluster-cluster-sg",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-eks-cluster-cluster-sg",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:security-group/sg-00a98acec90e8cc2e",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a98acec90e8cc2e",
            "ingress": [],
            "name": "infoline-eks-cluster-node-sg",
            "name_prefix": "",
            "owner_id": "744804011706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infoline-eks-cluster-node-sg",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-eks-cluster-node-sg",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_node_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3026359900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09fdb12f6ec823db8",
            "security_group_rule_id": "sgr-059cc41b023449178",
            "self": false,
            "source_security_group_id": "sg-00a98acec90e8cc2e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_workstation_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1469201969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09fdb12f6ec823db8",
            "security_group_rule_id": "sgr-0b4ec2e7d47a728d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1333852752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a98acec90e8cc2e",
            "security_group_rule_id": "sgr-077ff38f447fc242f",
            "self": false,
            "source_security_group_id": "sg-09fdb12f6ec823db8",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1322817365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00a98acec90e8cc2e",
            "security_group_rule_id": "sgr-0f6482abaf49fcbd7",
            "self": false,
            "source_security_group_id": "sg-00a98acec90e8cc2e",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node",
            "module.vpc.aws_default_security_group.default",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:security-group/sg-0afd2e781bae08940",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afd2e781bae08940",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "744804011706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infoline-dev-default-sg",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-default-sg",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c631a8faecc28131",
            "arn": "arn:aws:ec2:eu-west-3:744804011706:elastic-ip/eipalloc-0c631a8faecc28131",
            "domain": "vpc",
            "id": "eipalloc-0c631a8faecc28131",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-35-181-163-221.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.163.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "infoline-dev-eip-eu-west-3a",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-eip-eu-west-3a",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b9bc9f54c61b322",
            "arn": "arn:aws:ec2:eu-west-3:744804011706:elastic-ip/eipalloc-03b9bc9f54c61b322",
            "domain": "vpc",
            "id": "eipalloc-03b9bc9f54c61b322",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-35-180-95-172.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.95.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "infoline-dev-eip-eu-west-3b",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-eip-eu-west-3b",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e4a242c9d5597d",
            "arn": "arn:aws:ec2:eu-west-3:744804011706:elastic-ip/eipalloc-002e4a242c9d5597d",
            "domain": "vpc",
            "id": "eipalloc-002e4a242c9d5597d",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-37-122-123.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.122.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "infoline-dev-eip-eu-west-3c",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-eip-eu-west-3c",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:internet-gateway/igw-0becb311531325b6c",
            "id": "igw-0becb311531325b6c",
            "owner_id": "744804011706",
            "tags": {
              "Name": "infoline-dev-igw",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-igw",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c631a8faecc28131",
            "association_id": "eipassoc-0076ae3a8c77ea633",
            "connectivity_type": "public",
            "id": "nat-038fc8e190b4cd824",
            "network_interface_id": "eni-049c6b925df9edcab",
            "private_ip": "10.0.101.51",
            "public_ip": "35.181.163.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e58bafec62a8e019",
            "tags": {
              "Name": "infoline-dev-nat-eu-west-3a",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-nat-eu-west-3a",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b9bc9f54c61b322",
            "association_id": "eipassoc-0773f6ef4ab01e005",
            "connectivity_type": "public",
            "id": "nat-073fd0d438ea454df",
            "network_interface_id": "eni-08ad0ff0eca24123e",
            "private_ip": "10.0.102.93",
            "public_ip": "35.180.95.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0747fef02b7018624",
            "tags": {
              "Name": "infoline-dev-nat-eu-west-3b",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-nat-eu-west-3b",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002e4a242c9d5597d",
            "association_id": "eipassoc-0ab742977007a4db8",
            "connectivity_type": "public",
            "id": "nat-0be13b325c474f458",
            "network_interface_id": "eni-09936c06b784af74c",
            "private_ip": "10.0.103.137",
            "public_ip": "13.37.122.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-022bd868dd74df0e7",
            "tags": {
              "Name": "infoline-dev-nat-eu-west-3c",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-nat-eu-west-3c",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:route-table/rtb-09ac5a1477f9b36bf",
            "id": "rtb-09ac5a1477f9b36bf",
            "owner_id": "744804011706",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infoline-dev-db-rt",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-db-rt",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:route-table/rtb-00b93e67a5a63b5b0",
            "id": "rtb-00b93e67a5a63b5b0",
            "owner_id": "744804011706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038fc8e190b4cd824",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infoline-dev-private-rt-eu-west-3a",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-private-rt-eu-west-3a",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:route-table/rtb-0550e8f6cbef0a589",
            "id": "rtb-0550e8f6cbef0a589",
            "owner_id": "744804011706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073fd0d438ea454df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infoline-dev-private-rt-eu-west-3b",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-private-rt-eu-west-3b",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:route-table/rtb-043437f3b5d7f0f9f",
            "id": "rtb-043437f3b5d7f0f9f",
            "owner_id": "744804011706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be13b325c474f458",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infoline-dev-private-rt-eu-west-3c",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-private-rt-eu-west-3c",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:route-table/rtb-0339d38a46dd4a215",
            "id": "rtb-0339d38a46dd4a215",
            "owner_id": "744804011706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0becb311531325b6c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infoline-dev-public-rt",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-public-rt",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef173d0b5e4920a1",
            "route_table_id": "rtb-09ac5a1477f9b36bf",
            "subnet_id": "subnet-0d06e1ce178aa320d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f945ae271d1b3aff",
            "route_table_id": "rtb-09ac5a1477f9b36bf",
            "subnet_id": "subnet-040c64b5614bf78ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003078b25dcb1af09",
            "route_table_id": "rtb-09ac5a1477f9b36bf",
            "subnet_id": "subnet-0432e9b632643402f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ed80ea642de3bdf",
            "route_table_id": "rtb-00b93e67a5a63b5b0",
            "subnet_id": "subnet-0428f0853f03ca8b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa8c18488be99de9",
            "route_table_id": "rtb-0550e8f6cbef0a589",
            "subnet_id": "subnet-01ebb624cf89aa7c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5906d6629988ae9",
            "route_table_id": "rtb-043437f3b5d7f0f9f",
            "subnet_id": "subnet-0bc1172a065f44edf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023a7f0de858f71f2",
            "route_table_id": "rtb-0339d38a46dd4a215",
            "subnet_id": "subnet-0e58bafec62a8e019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7d9ccd8c0cf7d4c",
            "route_table_id": "rtb-0339d38a46dd4a215",
            "subnet_id": "subnet-0747fef02b7018624"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0642b95be5dfd2c72",
            "route_table_id": "rtb-0339d38a46dd4a215",
            "subnet_id": "subnet-022bd868dd74df0e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-0d06e1ce178aa320d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d06e1ce178aa320d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-db-eu-west-3a",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-db-eu-west-3a",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-040c64b5614bf78ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040c64b5614bf78ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-db-eu-west-3b",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-db-eu-west-3b",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-0432e9b632643402f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0432e9b632643402f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-db-eu-west-3c",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-db-eu-west-3c",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-0428f0853f03ca8b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0428f0853f03ca8b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-private-eu-west-3a",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-private-eu-west-3a",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-01ebb624cf89aa7c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ebb624cf89aa7c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-private-eu-west-3b",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-private-eu-west-3b",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-0bc1172a065f44edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc1172a065f44edf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-private-eu-west-3c",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-private-eu-west-3c",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-0e58bafec62a8e019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e58bafec62a8e019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-public-eu-west-3a",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-public-eu-west-3a",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-0747fef02b7018624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0747fef02b7018624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-public-eu-west-3b",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-public-eu-west-3b",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:subnet/subnet-022bd868dd74df0e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022bd868dd74df0e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744804011706",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infoline-dev-public-eu-west-3c",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-public-eu-west-3c",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps",
              "kubernetes.io/cluster/infoline-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-096a26b94d4861d37"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:744804011706:vpc/vpc-096a26b94d4861d37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f27268d53d4f2a49",
            "default_route_table_id": "rtb-0fd69cfe03cb20f27",
            "default_security_group_id": "sg-0afd2e781bae08940",
            "dhcp_options_id": "dopt-0a5cb717e769ac21e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096a26b94d4861d37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd69cfe03cb20f27",
            "owner_id": "744804011706",
            "tags": {
              "Name": "infoline-dev-vpc",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "infoline-dev-vpc",
              "Owner": "jenkins-leroy",
              "Project": "InfoLine",
              "Student": "jenkins-leroy",
              "TP": "DevOps"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}